fix: Alignment issues

--- a/src/css/_saved-spaces-list.scss
+++ b/src/css/_saved-spaces-list.scss
@@ -7,6 +7,7 @@
   overflow-y: auto;
   min-height: 0px;
   position: relative;
+  margin: 0;
   margin-bottom: 50px;
   padding: 0;
 
